# mountly-rest-onboarding

./: .env.example  .gitignore  ARCHITECTURE.md  CONTEXT.md  LICENSE  Makefile  README.md  docker-compose.local.yml  docker-compose.production.yml
.envs.production.example/: .app  .postgres
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: analytics.py  config.py  database.py  graph.py  ingest.py  llm.py  main.py  merge.py  models.py  parsers.py  registry.py  schemas.py  service.py  storage.py  validators.py
backend/scripts/: seed_demo.py  start
backend/tests/: conftest.py  test_admin_feedback.py  test_admin_metrics.py  test_api_happy_path.py  test_crash_from_empty.py  test_file_limits.py  test_live_samples.py  test_multi_onboarding.py  test_parse_in_flight.py  test_pipeline_e2e.py  test_polish.py  test_prices.py  test_validators.py
backend/tests/fixtures/: banking_extraction.json  legal_extraction.json  menu_extraction.json
backend/tests/fixtures/samples/: README.md
backend/tests/scripts/: regen_fixtures.py
docs/: API_CONTRACT.md  CONVENTIONS.md  DECISIONS.md
frontend/: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  env.d.ts  main.ts
frontend/tests/: addItemGhostRow.test.ts  analyticsEvents.test.ts  confirmDialog.test.ts  confirmEmission.test.ts  cookieBanner.test.ts  crashSafe.test.ts  crashSafeViews.test.ts  menuDiff.test.ts  (+13 more)
(+57 files in other folders)
